# stat362

./: .gitignore  README.md  pyproject.toml  test_env.ipynb  test_torch_env.py  venv_setup.md
instructor/Assignment 1/: HW1_binary.ipynb
instructor/lectures/: Python_Numpy_Vectorization.html  Python_Numpy_Vectorization.ipynb  poetry_tutorials.html
instructor/lectures/poetry_tutorials_files/: GD_MLR.pptx  Python_Numpy_Vectorization.ipynb
instructor/quizzes/week 3/: gd_mlr.html  gd_mlr.ipynb  gd_slr.html  gd_slr.ipynb  wed.html
instructor/quizzes/week 4/: regularized_gd.ipynb  vectorized_gd.ipynb
student/: poetry_tutorials.ipynb
